--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "undetected-browser",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "Puppeteer implementation with more anti-detection methods for interacting with websites",
   "keywords": [
     "browser",
@@ -20,7 +20,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Allory Dante",
-  "license": "ISC",
-  "dependencies": {
-  }
+  "license": "ISC"
 }
