--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "undetected-browser",
-  "version": "1.0.7",
+  "version": "2.0.0",
   "description": "Puppeteer implementation with more anti-detection methods for interacting with websites",
   "keywords": [
     "browser",
@@ -17,10 +17,14 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "test" : "node --experimental-vm-modules node_modules/jest/bin/jest.js test.js"
   },
   "author": "Allory Dante",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "puppeteer": "^22.2.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
