--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "main": "index.js",
   "scripts": {
-  "test" : "node --experimental-vm-modules node_modules/jest/bin/jest.js test.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js test.js"
   },
   "author": "Allory Dante",
   "license": "ISC",
@@ -26,5 +26,9 @@
     "puppeteer": "^22.2.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
+  },
+  "dependencies": {
+    "@forad/puppeteer-humanize": "^1.1.3",
+    "ghost-cursor": "^1.2.0"
   }
 }
